--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/runtime": "^7.12.5",
     "@types/history": "^4.7.9",
+    "@types/lodash": "^4.14.198",
     "@types/react": "^17.0.21",
     "@types/react-csv": "^1.1.2",
     "@types/react-dom": "^17.0.9",
@@ -77,10 +78,10 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@mui/base": "^5.0.0-beta.16",
     "@mui/icons-material": "^5.0.0",
     "@mui/lab": "^5.0.0-alpha.47",
     "@mui/material": "^5.0.0",
-    "@mui/base": "^5.0.0-beta.16",
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
