--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/history": "^4.7.9",
     "@types/lodash": "^4.14.198",
     "@types/react": "^17.0.21",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-csv": "^1.1.2",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.1",
@@ -91,6 +92,7 @@
     "http-server": "^13.0.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
