--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fontsource-variable/outfit": "^5.0.8",
+    "@fontsource/noto-sans": "^5.0.12",
     "@mui/base": "^5.0.0-beta.16",
     "@mui/icons-material": "^5.0.0",
     "@mui/lab": "^5.0.0-alpha.47",
