--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,13 @@
     "no-use-before-define": "off", // note you must disable the base rule as it can report incorrect errors
     "@typescript-eslint/no-use-before-define": ["error"],
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": ["error", { "ignoreTypeValueShadow": true }]
+    "@typescript-eslint/no-shadow": ["error", { "ignoreTypeValueShadow": true }],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   },
   "overrides": [
     {
