--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "trailingComma": "all",
   "tabWidth": 2,
   "jsxSingleQuote": true,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "endOfLine":"auto"
 }
