--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "redux": "^4.1.1"
+    "redux": "^4.1.1",
+    "xml-js": "^1.6.11"
   }
 }
