Implement drs api

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,5 @@
 BASE_URL=http://183.111.206.46:8213/v1/core/chat/mainMidm
 SEARCH_WEB_BASE_URL=http://183.102.74.151:7002
+DRS_BASE_URL=http://183.102.74.152:8181
 MIDM_BASE_URL=http://183.111.206.46:8213
+IMAGE_SERVER_BASE_URL=http://183.102.74.151
