--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "genie-console",
   "version": "1.0.0",
+  "homepage": "/home",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -43,7 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "babel-loader": "^8.2.2",
-    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.2.0",
     "dotenv-webpack": "^7.0.3",
@@ -67,7 +68,7 @@
     "mini-css-extract-plugin": "^2.3.0",
     "prettier": "^2.4.1",
     "sass": "^1.41.1",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^13.3.2",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
