--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react-csv": "^1.1.2",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.1",
+    "@types/redux-state-sync": "^3.1.7",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "babel-loader": "^8.2.2",
@@ -100,6 +101,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
+    "redux-state-sync": "^3.1.4",
     "xml-js": "^1.6.11"
   }
 }
